--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,12 @@ $black: #606060;
 
 html{
   background-color: $blue;
+  font-family: "Helvetica Neue",
+      Arial,
+      "Hiragino Kaku Gothic ProN",
+      "Hiragino Sans",
+      "Meiryo",
+      sans-serif;
 }
 
 body{
