--- a/src/sass/profile.scss
+++ b/src/sass/profile.scss
@@ -11,14 +11,13 @@ $black: #606060;
     padding: 2%;
     text-align: center;
     img{
-        width: 60%;
+        width: 70%;
     }
 }
 
 .profile-title{
     font-size: 50px;
-    margin-bottom: 1%;
-    margin-bottom: 10%;
+    margin-top: 4%;
 }
 
 .pro-title{
