skillsとworksのとこjustify-contentで中央寄した

--- a/src/sass/profile.scss
+++ b/src/sass/profile.scss
@@ -68,6 +68,8 @@ $black: #606060;
     flex-wrap: wrap;
     width: 70%;
     margin: 0 auto;
+    text-align: center;
+    justify-content: center;
 }
 
 .skill-container{
