--- a/src/sass/contact.scss
+++ b/src/sass/contact.scss
@@ -45,5 +45,26 @@ $black: #606060;
 }
 
 @media(max-width: 800px){
+    .contact-container{
+        width: 90%;
+        padding: 2% 3%;
+        h1{
+            margin-bottom: 10px;
+        }
+        h2{
+            font-size: 20px;
+            margin-bottom: 2%;
+        }
+        input, textarea{
+            width: 50%;
+            margin-bottom: 2%;
+            border: 2px solid #eea010;
+            border-radius: 10px;
+            padding: 1%;
+        }
+        textarea{
+            width: 70%;
+        }
     
+    } 
 }
